Adicionadas as Horas

--- a/K8055Test/MainWindow.xaml
+++ b/K8055Test/MainWindow.xaml
@@ -24,7 +24,7 @@
             <Setter Property="RenderTransformOrigin" Value="0.5,0.5"/>
             <Setter Property="SmallChange" Value="1"/>
             <Setter Property="TickFrequency" Value="5"/>
-            <EventSetter Event="ValueChanged" Handler="K8055AnalogOutputSliderValueChanged"/>  
+            <EventSetter Event="ValueChanged" Handler="K8055AnalogOutputSliderValueChanged"/>
         </Style>
 
         <Style x:Key="AnalogInputProgressBar" TargetType="{x:Type ProgressBar}">
@@ -65,23 +65,23 @@
         <Button x:Name="K8055SetAllAnalogButton"    Style="{StaticResource ProcedureButtons}" Content="Set All Analog"    Margin="10,227, 0, 0"/>
         <Button x:Name="K8055ClearAllAnalogButton"  Style="{StaticResource ProcedureButtons}" Content="Clear All Analog"  Margin="10,257, 0, 0"/>
         <Button x:Name="K8055OutputTestButton"      Style="{StaticResource ProcedureButtons}" Content="Output Test"       Margin="10,287, 0, 0"/>
-        
-        
-        
-        
+
+
+
+
         <Button x:Name="dinner"   Style="{StaticResource ProcedureButtons}" Content="Luzes jantar"    Margin="10,334,0,0"/>
         <Button x:Name="sofa"     Style="{StaticResource ProcedureButtons}" Content="Sofá"            Margin="114,334,0,0"/>
         <Button x:Name="temp"     Style="{StaticResource ProcedureButtons}" Content="Temperatura"     Margin="219,334,0,0"/>
-        <Button x:Name="blinds"   Style="{StaticResource ProcedureButtons}" Content="Persianas"       Margin="324,334,0,0"/>
-        <Button x:Name="hose"     Style="{StaticResource ProcedureButtons}" Content="Sistema Rega"    Margin="429,334,0,0"/>
-        <Button x:Name="timeDay"  Style="{StaticResource ProcedureButtons}" Content="Hora do Dia"     Margin="534,334,0,0"/>
-        <Button x:Name="onOff"    Style="{StaticResource ProcedureButtons}" Content="On/Off"          Margin="272,364,0,0"/>
+        <Button x:Name="blinds"   Style="{StaticResource ProcedureButtons}" Content="Persianas"       Margin="10,379,0,0"/>
+        <Button x:Name="hose"     Style="{StaticResource ProcedureButtons}" Content="Sistema Rega"    Margin="115,379,0,0"/>
+        <Button x:Name="timeDay"  Style="{StaticResource ProcedureButtons}" Content="Hora do Dia"     Margin="220,379,0,0"/>
+        <Button x:Name="onOff"    Style="{StaticResource ProcedureButtons}" Content="On/Off"          Margin="154,437,0,0"/>
 
         <Button x:Name="dayNight" Style="{StaticResource ProcedureButtons}" Content="Day/night Cycle" Margin="10,437,0,0"/>
-        
-        
-        
-        
+
+
+
+
 
         <GroupBox Height="297" Width="70" Margin="134,15,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
             <GroupBox.Header>
@@ -100,7 +100,7 @@
                 </Slider>
             </Canvas>
         </GroupBox>
-        
+
         <GroupBox Height="297" Width="95" Margin="220,15,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
             <GroupBox.Header>
                 <Label>ADC</Label>
@@ -131,7 +131,7 @@
                 <CheckBox x:Name="K8055DigitalInputCheckbox5" Canvas.Left="145" Canvas.Top="0" Content="5" IsEnabled="False"/>
             </Canvas>
         </GroupBox>
-        
+
         <GroupBox Height="55" Width="290" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="328,75,0,0">
             <GroupBox.Header>
                 <Label>Outputs</Label>
@@ -159,7 +159,7 @@
                 <Button  x:Name="K8055SetDebounce1Button"  Style="{StaticResource DebounceStyle}" Canvas.Left="4" Canvas.Top="108" Content="Set Debounce Time" Click="K8055SetDebounceButtonClick" />
             </Canvas>
         </GroupBox>
-        
+
         <GroupBox Height="177" Width="135" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="483,135,0,0">
             <GroupBox.Header>
                 <Label>Counter 2</Label>
@@ -171,6 +171,45 @@
                 <Button x:Name="K8055SetDebounce2Button"   Style="{StaticResource DebounceStyle}"   Canvas.Left="4" Canvas.Top="108" Content="Set Debounce Time" Click="K8055SetDebounceButtonClick"/>
             </Canvas>
         </GroupBox>
-        
+        <GroupBox Height="130" Width="290" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="328,317,0,0">
+            <GroupBox.Header>
+                <Label Content="Hora do Dia"/>
+            </GroupBox.Header>
+        </GroupBox>
+        <GroupBox Height="105" Width="143" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="331,353,0,0" RenderTransformOrigin="0.5,0.5">
+            <GroupBox.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleY="0.565"/>
+                    <RotateTransform/>
+                    <TranslateTransform Y="0.74"/>
+                </TransformGroup>
+            </GroupBox.RenderTransform>
+            <GroupBox.Header>
+                <Label Content="Manhã" Height="27" VerticalAlignment="Top"/>
+            </GroupBox.Header>
+            <Canvas x:Name="K8055Counter2Canvas2" Margin="0,0,146,7">
+                <TextBox x:Name="TempoManha"     Style="{StaticResource DebounceStyle}"   Canvas.Left="4" IsEnabled="False"/>
+                <Button x:Name="AtivarManha"  Style="{StaticResource DebounceStyle}"   Canvas.Left="4" Canvas.Top="40" Content="Ativar" Click="K8055CounterResetButtonClick"/>
+            </Canvas>
+        </GroupBox>
+        <GroupBox Height="105" Width="141" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="474,354,0,0" RenderTransformOrigin="0.5,0.5">
+            <GroupBox.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleY="0.565"/>
+                    <RotateTransform/>
+                    <TranslateTransform Y="0.74"/>
+                </TransformGroup>
+            </GroupBox.RenderTransform>
+            <GroupBox.Header>
+                <Label Content="Noite" Height="27" VerticalAlignment="Top"/>
+            </GroupBox.Header>
+            <Canvas x:Name="K8055Counter2Canvas1" Margin="0,0,146,7">
+                <TextBox x:Name="TempoNoite"     Style="{StaticResource DebounceStyle}"   Canvas.Left="4" IsEnabled="False"/>
+                <Button x:Name="AtivarNoite"  Style="{StaticResource DebounceStyle}"   Canvas.Left="4" Canvas.Top="40" Content="Ativar" Click="K8055CounterResetButtonClick"/>
+            </Canvas>
+        </GroupBox>
+
     </Grid>
 </Window>
